syntax = "proto3";

option csharp_namespace = "Grpc.Terminal.Enums";

package terminal;

enum CopyTicks {
    ALL = 0;
    INFO = 1;
    TRADE = 2;
}

enum TickFlags {
    TICK_FLAGS_UNKNOWN = 0;
    TICK_FLAGS_BID   = 0x02;
    TICK_FLAGS_ASK   = 0x04;
    TICK_FLAGS_LAST  = 0x08;
    TICK_FLAGS_VOLUME= 0x10;
    TICK_FLAGS_BUY   = 0x20;
    TICK_FLAGS_SELL  = 0x40;
}